
import("//build/ohos.gni")  # 导入编译模板
ohos_executable("helloworld") { # 可执行模块
  sources = [       # 模块源码
    "src/helloworld.c"
  ]
  include_dirs = [  # 模块依赖头文件目录
    "include" 
  ]
  output_name = "helloworld" #指定输出文件名称
  cflags = [ "-Werror" ]     #设置全局的 C/C++ 编译标志, 将所有编译警告视为错误 规范代码
  cflags_c = []   #设置全局的 C 编译标志 ，"-std=c99" 
  cflags_cc = []  #设置全局的 C++ 编译标志, -std=c++11标准的语言特性和标准
  ldflags = []    #链接选项，比如所需要链接的动态库， "-L/path/to/library", "-lmylib" 
  configs = []    #用于定义全局的配置设置，构建系统的参数和选项
  deps =[]    # 部件内部依赖
  defines = [ ]  #设置全局的预处理宏定义。 "-DHellowrold_ENABLE"
  part_name = "hello"    # 所属部件名称，必选
  install_images = [ "system" ]
  install_enable = true  # 是否默认安装（缺省默认不安装），可选
}

