# Copyright (c) 2024 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

# 共享库名字需要和 @ohos.xxx.d.ts 一致
ohos_shared_library("control_demo")
{
    sources = [
        "napitest.cpp",
        "pwm/um_pwm.c",
        "uart/um_uart.cpp"
    ]
    include_dirs = [
        ".",
        "//third_party/node/src",
    ]
    external_deps = [
         "napi:ace_napi",
         "c_utils:utils",
         "hilog:libhilog",
    ]
    remove_configs = [ "//build/config/compiler:no_rtti" ]
    cflags=[
        "-Werror"
    ]
    cflags_cc=[
        "-frtti",
    ]
    ldflags = [
    ]
    relative_install_dir = "module"
    part_name = "mymodule"
    subsystem_name = "pwm_control_subsys"
}